create-vpc.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create a VPC with public and private subnets, NAT Gateway, and IGW.

Parameters:
  VPCName:
    Type: String
    Description: Name of the VPC
  VPCBlock:
    Type: String
    Description: CIDR block for the VPC (e.g., 10.0.0.0/16)
  PublicSubnetBlock:
    Type: String
    Description: CIDR block for the public subnet
  PrivateSubnetBlock:
    Type: String
    Description: CIDR block for the private subnet
  AvailabilityZones:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Description: List of availability zones to use
  Region:
    Type: String
    Default: us-east-1
    Description: AWS Region to deploy the resources

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref VPCName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnetBlock
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !Ref AvailabilityZones]

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnetBlock
      AvailabilityZone: !Select [1, !Ref AvailabilityZones]

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  PublicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway
  PrivateRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  VPCId:
    Value: !Ref VPC
    Export:
      Name: VPCId
  PublicSubnetId:
    Value: !Ref PublicSubnet
    Export:
      Name: PublicSubnetId
  PrivateSubnetId:
    Value: !Ref PrivateSubnet
    Export:
      Name: PrivateSubnetId
